--- a/webjavier.html
+++ b/webjavier.html
@@ -138,7 +138,7 @@ h3{
                     <p>untuk dibuat dikala kesusahan untuk memasak</p>
                 </div>
                 <div style="width: 50%; text-align: center;">
-                    <img src="https://scontent.fbth7-1.fna.fbcdn.net/v/t39.30808-6/467392930_551337484193374_4493211700707890296_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeG0DpfBnSFJnwWsVfeOsjq4FuCQ0Ow8-ggW4JDQ7Dz6CJp8c5tn99KvAnj-yY5zs6LMMvGdCyigvv78n2qxqlxF&_nc_ohc=2oGJ2vUk86cQ7kNvgGmWoGG&_nc_zt=23&_nc_ht=scontent.fbth7-1.fna&_nc_gid=AkOHobw_6maH_PEJiyff7QZ&oh=00_AYDLrLg982xWZG9rK13NjkUWflkMgvWDZaVYEkMN6GsaVg&oe=678DA511" class="img1">    
+                    <img src="foto.img" class="img1">    
                 </div>
             </div>
         </div>
